    - Previously needed a separate call
  * Now erases the message after the display (if a pause is invoked)
    - Previously only properly erased when called on the main screen
    - The erasure was however also lost on the main screen when `IconRowMove` and/or `IconRowTune` is active
    - Now fixed for all screens but artefacts may result with some custom banners
- Improves `ProtectNVRAM` Feature
  * Adds `rEFIt Variant` to UEFI Loaders filtered for `ProtectNVRAM`
    - Made up of `RefindPlus`, `rEFIt` and `rEFInd` files chain-loaded from named locations
    - The ProtectNVRAM feature is not enabled for such loaders
  * Now checks new NVRAM write entries against existing entries
    - Only updates the entries when absent or different
    - Filtering these reduces NVRAM writes and associated wear and tear
  * Expands blocked SecureBoot related items
  * Now clears existing instances of blocked variables
  * Adds `UnlockID` and `UnlockIDCopy` to filtered items
    - These are not certificates but work in concert with the certificates
    - Hence, not required once certificates are filtered
    - Filtering these reduces NVRAM writes and associated wear and tear
  * Filters out the Current OEM Policy from post-block clean up
    - Removal may have negative impact on UEFI-PC
    - Not strictly needed as ProtectNVRAM is currently limited to Apple Firmware
    - Considered best to add a filter now in case that changes in future
- Improves Identification of Linux Instances
  * `vmlinuz`, `bzImage`, and `kernel` loaders are now accounted for as Linux loaders
  * The `ProtectNVRAM` feature is now not applied to such loaders
  * The `grub` loader was already accounted for
- Improves OS Boot Filtering
  * The `OSType` flag is now taken into account
- Improves Load Error/Warning Display
  * The `ContinueOnWarning` feature is forced on temporarily if required
- Improves Time Bound Primed Buffer Mitigation
  * Mitigates against RefindPlus spontaneously running default items